# gpui-plot

./: Cargo.toml  README.md
examples/: animation.rs  gpui-plot-animation.rs  stock.rs
placeholder/: Cargo.toml
src/: fps.rs  lib.rs
src/figure/: axes.rs  figure.rs  grid.rs  mod.rs  plot.rs  plotters.rs  text.rs  ticks.rs
src/figure/axes/: mod.rs  model.rs  plotters.rs  view.rs  viewer.rs
src/geometry/: axis.rs  line.rs  marker.rs  mod.rs  point.rs  size.rs  text.rs
src/utils/: math.rs
