[package]
name = "gpui-plot"
version = "0.1.1"
edition = "2021"
authors = ["Jakku Sakura <qjk2001@gmail.com>"]
repository = "https://github.com/JakkuSakura/gpui-plot"
description = "Plotting with gpui in Rust"
license = "MIT"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "044eb7b99048e79da5aa3f2dd489ff3ed8f97a32" }
parking_lot = "0.12"
plotters = { version = "0.3.7", features = ["default"], optional = true }
plotters-gpui = { git = "https://github.com/JakkuSakura/plotters-gpui", rev = "4dfb17da7c7fe9007872aefc7a16642a39f07b8f", features = ["plotters"], optional = true }
tracing = "0.1"
chrono = "0.4"

[features]
default = ["plotters"]
plotters = ["dep:plotters-gpui", "dep:plotters"]

# this is to sync versions of font-kit
[patch."https://github.com/zed-industries/font-kit"]
font-kit = { git = "https://github.com/JakkuSakura/font-kit", branch = "gpui" }

# because plotters' font-kit might fail on linux
[patch.crates-io]
pathfinder_simd = { git = "https://github.com/theoparis/pathfinder.git" }
font-kit = { git = "https://github.com/JakkuSakura/font-kit", branch = "gpui" }